--- a/requirements.txt
+++ b/requirements.txt
@@ -2,13 +2,16 @@ ace_tools==0.0
 aiohappyeyeballs==2.4.4
 aiohttp==3.11.11
 aiosignal==1.3.2
+altair==5.5.0
 annotated-types==0.7.0
 anyio==4.8.0
 appnope==0.1.4
 asttokens==3.0.0
 async-timeout==4.0.3
 attrs==25.1.0
+blinker==1.9.0
 blis==1.2.0
+cachetools==5.5.1
 catalogue==2.0.10
 certifi==2025.1.31
 charset-normalizer==3.4.1
@@ -20,11 +23,15 @@ cymem==2.0.11
 dataclasses-json==0.6.7
 debugpy==1.8.12
 decorator==5.1.1
+et_xmlfile==2.0.0
 exceptiongroup==1.2.2
 executing==2.2.0
+fastjsonschema==2.21.1
 filelock==3.17.0
 frozenlist==1.5.0
 fsspec==2024.12.0
+gitdb==4.0.12
+GitPython==3.1.44
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
@@ -36,9 +43,12 @@ ipykernel==6.29.5
 ipython==8.18.1
 jedi==0.19.2
 Jinja2==3.1.4
+joblib==1.4.2
 json_repair==0.30.3
 jsonpatch==1.33
 jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
 jupyter_client==8.6.3
 jupyter_core==5.7.2
 langchain==0.3.17
@@ -48,6 +58,7 @@ langchain-text-splitters==0.3.5
 langcodes==3.5.0
 langsmith==0.3.4
 language_data==1.3.0
+llvmlite==0.43.0
 marisa-trie==1.2.1
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
@@ -58,11 +69,15 @@ mpmath==1.3.0
 multidict==6.1.0
 murmurhash==1.0.12
 mypy-extensions==1.0.0
+narwhals==1.26.0
+nbformat==5.10.4
 neo4j==5.27.0
 neo4j-graphrag==1.4.2
 nest-asyncio==1.6.0
 networkx==3.2.1
+numba==0.60.0
 numpy==1.26.4
+openpyxl==3.1.5
 orjson==3.10.15
 packaging==24.2
 pandas==2.2.3
@@ -70,30 +85,42 @@ parso==0.8.4
 pexpect==4.9.0
 pillow==11.0.0
 platformdirs==4.3.6
+plotly==6.0.0
 preshed==3.0.9
 prompt_toolkit==3.0.50
 propcache==0.2.1
+protobuf==5.29.3
 psutil==6.1.1
 ptyprocess==0.7.0
 pure_eval==0.2.3
+pyarrow==19.0.0
 pydantic==2.10.6
 pydantic-settings==2.7.1
 pydantic_core==2.27.2
+pydeck==0.9.1
 Pygments==2.19.1
+PyMuPDF==1.25.3
+pynndescent==0.5.13
 pypdf==4.3.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2025.1
 PyYAML==6.0.2
 pyzmq==26.2.1
+referencing==0.36.2
 regex==2024.11.6
 requests==2.32.3
 requests-toolbelt==1.0.0
 rich==13.9.4
+rpds-py==0.22.3
 safetensors==0.5.2
+scikit-learn==1.6.1
+scipy==1.13.1
+sentence-transformers==3.4.1
 shellingham==1.5.4
 six==1.17.0
 smart-open==7.1.0
+smmap==5.0.2
 sniffio==1.3.1
 spacy==3.8.3
 spacy-legacy==3.0.12
@@ -101,10 +128,13 @@ spacy-loggers==1.0.5
 SQLAlchemy==2.0.37
 srsly==2.5.1
 stack-data==0.6.3
+streamlit==1.42.0
 sympy==1.13.1
 tenacity==9.0.0
 thinc==8.3.4
+threadpoolctl==3.5.0
 tokenizers==0.21.0
+toml==0.10.2
 torch==2.6.0
 torchaudio==2.6.0
 torchvision==0.21.0
@@ -117,6 +147,8 @@ types-PyYAML==6.0.12.20241230
 typing-inspect==0.9.0
 typing_extensions==4.12.2
 tzdata==2025.1
+umap==0.1.1
+umap-learn==0.5.7
 urllib3==2.3.0
 uuid==1.30
 wasabi==1.1.3
